--- a/jeux-de-cartes.html
+++ b/jeux-de-cartes.html
@@ -126,127 +126,127 @@
     </nav>
   </header>
 
-  <div id="carouselExampleCaptions" class="d-lg-block carousel slide mx-auto mt-4">
+  <div class="wrap">
+    <div id="carouselExampleCaptions" class="d-lg-block carousel slide mx-auto mt-4">
 
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="img/twenty-percent-off-1424812_640.png" class="d-block" alt="20%">
-        <div class="carousel-caption d-none d-md-block">
-          <p class="offre">Offre de bienvenue</p>
-          <p class="vingt">20% de réduction sur votre première commande</p>
-          <p><a class="btn btn-lg" href="#">Enregistrement</a></p>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="img/twenty-percent-off-1424812_640.png" class="d-block" alt="20%">
+          <div class="carousel-caption d-none d-md-block">
+            <p class="offre">Offre de bienvenue</p>
+            <p class="vingt">20% de réduction sur votre première commande</p>
+            <p><a class="btn btn-lg" href="#">Enregistrement</a></p>
+          </div>
+        </div>
+
+        <div class="carousel-item">
+          <img src="img/limited-time-offer-1438906_640.png" class="d-block" alt="moitieprix">
+          <p>Du 23 septembre au 7 octobre 2023, pour l'achat d'un jeu, le 2ème est à moitié prix.</p>
+        </div>
+
+
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+            aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+            aria-label="Slide 2"></button>
+        </div>
+      </div>
+    </div>
+
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+
+    <div class="titre text-center mt-5 text-white">
+      <h1>Jeux de cartes</h1>
+    </div>
+
+    <div class="listcard1 text-center row justify-content-evenly mt-4">
+      <div class="card border-4 p-2">
+        <a href="unjeudecarte.html" target="_blank"><img src="img/jeuxdecartes/dobble1.jpeg" class="card-img-top"
+            alt="Image dobble"></a>
+        <div class="card-body">
+          </a>
+          <h5 class="card-title text-white">Dobble</h5>
+          <p class="card-text text-white">Jeu de rapidité | Dès 8 ans | 2 à 8 joueurs | 15 min</p>
+          <p>14€99</p>
+          <a href="#" class="btn3 text-dark">Voir Plus</a>
         </div>
       </div>
 
-      <div class="carousel-item">
-        <img src="img/limited-time-offer-1438906_640.png" class="d-block" alt="moitieprix">
-        <p>Du 23 septembre au 7 octobre 2023, pour l'achat d'un jeu, le 2ème est à moitié prix.</p>
+
+      <div class="card border-4 p-2">
+        <img src="img/jeuxdecartes/loup garou1.jpeg" class="card-img-top" alt="Image Loup garou">
+        <div class="card-body">
+          <h5 class="card-title text-white">Loup Garou</h5>
+          <p class="card-text text-white">Jeu de société | Dès 10 ans | 8 à 18 joueurs | 30 min</p>
+          <p>15€90</p>
+          <a href="#" class="btn3 text-dark">Voir Plus</a>
+        </div>
       </div>
 
 
-      <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-          aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-          aria-label="Slide 2"></button>
-      </div>
-    </div>
-  </div>
-
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-  </div>
-
-
-  <div class="titre text-center mt-5 text-white">
-    <h1>Jeux de cartes</h1>
-  </div>
-
-  <div class="listcard1 text-center row justify-content-evenly mt-4">
-    <div class="card border-4 p-2">
-      <a href="unjeudecarte.html" target="_blank"><img src="img/jeuxdecartes/dobble1.jpeg" class="card-img-top" alt="Image dobble"></a>
-      <div class="card-body">
-        </a><h5 class="card-title text-white">Dobble</h5>
-        <p class="card-text text-white">Jeu de rapidité | Dès 8 ans | 2 à 8 joueurs | 15 min</p>
-        <p>14€99</p>
-        <a href="#" class="btn3 text-dark">Voir Plus</a>
+      <div class="card border-4 p-2">
+        <img src="img/jeuxdecartes/Uno3.jpg" class="card-img-top" alt="Image uno">
+        <div class="card-body">
+          <h5 class="card-title text-white">Uno</h5>
+          <p class="card-text text-white">Jeu de cartes | Dès 7 ans | 2 à 4 joueurs | 30 min </p>
+          <p>10€99</p>
+          <a href="#" class="btn3 text-dark">Voir Plus</a>
+        </div>
       </div>
     </div>
 
+    <div class="listcard2  text-center row justify-content-evenly mt-5">
+      <div class="card border-4 p-2">
+        <img src="img/jeuxdecartes/skyjo2.jpeg" class="card-img-top" alt="Image Skyjo">
+        <div class="card-body">
+          <h5 class="card-title text-white">Skyjo</h5>
+          <p class="card-text text-white">Jeu de cartes | Dès 8 ans | 8 joueurs| 15 min</p>
+          <p>21€90</p>
+          <a href="#" class="btn3 text-dark">Voir Plus</a>
+        </div>
+      </div>
 
-    <div class="card border-4 p-2">
-      <img src="img/jeuxdecartes/loup garou1.jpeg" class="card-img-top" alt="Image Loup garou">
-      <div class="card-body">
-        <h5 class="card-title text-white">Loup Garou</h5>
-        <p class="card-text text-white">Jeu de société | Dès 10 ans | 8 à 18 joueurs | 30 min</p>
-        <p>15€90</p>
-        <a href="#" class="btn3 text-dark">Voir Plus</a>
+
+      <div class="card border-4 p-2">
+        <img src="img/jeuxdecartes/qui prend1.jpeg" class="card-img-top" alt="Image 6 qui prends">
+        <div class="card-body">
+          <h5 class="card-title text-white">6 qui prend</h5>
+          <p class="card-text text-white">Jeu de cartes | Dès 10 ans | 2 à 10 joueurs | 45 minutes</p>
+          <p>13€99</p>
+          <a href="#" class="btn3 text-dark">Voir Plus</a>
+        </div>
       </div>
     </div>
 
-
-    <div class="card border-4 p-2">
-      <img src="img/jeuxdecartes/Uno3.jpg" class="card-img-top" alt="Image uno">
-      <div class="card-body">
-        <h5 class="card-title text-white">Uno</h5>
-        <p class="card-text text-white">Jeu de cartes | Dès 7 ans | 2 à 4 joueurs | 30 min </p>
-        <p>10€99</p>
-        <a href="#" class="btn3 text-dark">Voir Plus</a>
-      </div>
-    </div>
-  </div>
-
-  <div class="listcard2  text-center row justify-content-evenly mt-5">
-    <div class="card border-4 p-2">
-      <img src="img/jeuxdecartes/skyjo2.jpeg" class="card-img-top" alt="Image Skyjo">
-      <div class="card-body">
-        <h5 class="card-title text-white">Skyjo</h5>
-        <p class="card-text text-white">Jeu de cartes | Dès 8 ans | 8 joueurs| 15 min</p>
-        <p>21€90</p>
-        <a href="#" class="btn3 text-dark">Voir Plus</a>
-      </div>
     </div>
 
 
-    <div class="card border-4 p-2">
-      <img src="img/jeuxdecartes/qui prend1.jpeg" class="card-img-top" alt="Image 6 qui prends">
-      <div class="card-body">
-        <h5 class="card-title text-white">6 qui prend</h5>
-        <p class="card-text text-white">Jeu de cartes | Dès 10 ans | 2 à 10 joueurs | 45 minutes</p>
-        <p>13€99</p>
-        <a href="#" class="btn3 text-dark">Voir Plus</a>
-      </div>
+    <div class="b-example-divider"></div>
+    <div class="container">
+      <footer class="py-3 my-4">
+        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+          <li class="nav-item"><a href="contact.html" class="nav-link px-2 text-muted">Contact</a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">CGU</a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Mentions légales</a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
+        </ul>
+        <p class="text-center text-muted">&copy; 2023 Teams Ln ELoann Benjamin</p>
+      </footer>
     </div>
-  </div>
-
-  </main>
-
-  </section>
-
-  <div class="b-example-divider"></div>
-  <div class="container">
-    <footer class="py-3 my-4">
-      <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-        <li class="nav-item"><a href="contact.html" class="nav-link px-2 text-muted">Contact</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">CGU</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Mentions légales</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
-      </ul>
-      <p class="text-center text-muted">&copy; 2023 Teams Ln ELoann Benjamin</p>
-    </footer>
-  </div>
 
 
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-    crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"></script>
 </body>
 
 </html>
