--- a/jeux-de-cartes.html
+++ b/jeux-de-cartes.html
@@ -167,8 +167,9 @@
       <h1>Jeux de cartes</h1>
     </div>
 
-    <div class="listcard1 text-center row justify-content-evenly mt-4">
-      <div class="card border-4 p-2">
+    <div class="listcard1 text-center d-flex row justify-content-center mt-4">
+      
+      <div class="card border-4 p-2 mb-5 mx-4">
         <a href="unjeudecarte.html" target="_blank"><img src="img/jeuxdecartes/dobble1.jpeg" class="card-img-top"
             alt="Image dobble"></a>
         <div class="card-body">
@@ -181,7 +182,7 @@
       </div>
 
 
-      <div class="card border-4 p-2">
+      <div class="card border-4 p-2 mb-5 mx-4">
         <img src="img/jeuxdecartes/loup garou1.jpeg" class="card-img-top" alt="Image Loup garou">
         <div class="card-body">
           <h5 class="card-title text-white">Loup Garou</h5>
@@ -192,7 +193,7 @@
       </div>
 
 
-      <div class="card border-4 p-2">
+      <div class="card border-4 p-2 mb-5 mx-4">
         <img src="img/jeuxdecartes/Uno3.jpg" class="card-img-top" alt="Image uno">
         <div class="card-body">
           <h5 class="card-title text-white">Uno</h5>
@@ -201,10 +202,10 @@
           <a href="#" class="btn3 text-dark">Voir Plus</a>
         </div>
       </div>
-    </div>
 
-    <div class="listcard2  text-center row justify-content-evenly mt-5">
-      <div class="card border-4 p-2">
+      <br>
+
+      <div class="card border-4 p-2 mb-5 mx-4">
         <img src="img/jeuxdecartes/skyjo2.jpeg" class="card-img-top" alt="Image Skyjo">
         <div class="card-body">
           <h5 class="card-title text-white">Skyjo</h5>
@@ -215,7 +216,7 @@
       </div>
 
 
-      <div class="card border-4 p-2">
+      <div class="card border-4 p-2 mb-5 mx-4">
         <img src="img/jeuxdecartes/qui prend1.jpeg" class="card-img-top" alt="Image 6 qui prends">
         <div class="card-body">
           <h5 class="card-title text-white">6 qui prend</h5>
@@ -224,29 +225,28 @@
           <a href="#" class="btn3 text-dark">Voir Plus</a>
         </div>
       </div>
-    </div>
-
-    </div>
-
-
-    <div class="b-example-divider"></div>
-    <div class="container">
-      <footer class="py-3 my-4">
-        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-          <li class="nav-item"><a href="contact.html" class="nav-link px-2 text-muted">Contact</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">CGU</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Mentions légales</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
-        </ul>
-        <p class="text-center text-muted">&copy; 2023 Teams Ln ELoann Benjamin</p>
-      </footer>
-    </div>
+  </div>
 
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-      crossorigin="anonymous"></script>
+  <div class="b-example-divider"></div>
+  <div class="container">
+    <footer class="py-3 my-4">
+      <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+        <li class="nav-item"><a href="contact.html" class="nav-link px-2 text-muted">Contact</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">CGU</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Mentions légales</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
+      </ul>
+      <p class="text-center text-muted">&copy; 2023 Teams Ln ELoann Benjamin</p>
+    </footer>
+  </div>
+
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
