--- a/index.html
+++ b/index.html
@@ -125,86 +125,87 @@
       </div>
     </nav>
   </header>
+  <div class="wrap">
 
-  <div id="carouselExampleCaptions" class="d-lg-block carousel slide mx-auto mt-4">
+    <div id="carouselExampleCaptions" class="d-lg-block carousel slide mx-auto mt-4">
 
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="img/twenty-percent-off-1424812_640.png" class="d-block" alt="20%">
-        <div class="carousel-caption d-none d-md-block">
-          <p class="offre">Offre de bienvenue</p>
-          <p class="vingt">20% de réduction sur votre première commande</p>
-          <p><a class="btn btn-lg" href="#">Enregistrement</a></p>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="img/twenty-percent-off-1424812_640.png" class="d-block" alt="20%">
+          <div class="carousel-caption d-none d-md-block">
+            <p class="offre">Offre de bienvenue</p>
+            <p class="vingt">20% de réduction sur votre première commande</p>
+            <p><a class="btn btn-lg" href="#">Enregistrement</a></p>
+          </div>
+        </div>
+
+        <div class="carousel-item">
+          <img src="img/limited-time-offer-1438906_640.png" class="d-block" alt="moitieprix">
+          <p>Du 23 septembre au 7 octobre 2023, pour l'achat d'un jeu, le 2ème est à moitié prix.</p>
+        </div>
+
+
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+            aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+            aria-label="Slide 2"></button>
+        </div>
+      </div>
+    </div>
+
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+
+    <div class="categories d-flex row justify-content-center">
+      <div class="card">
+        <a href="jeux-de-des.html" target="_blank"><img src="img/dice-442544_640.jpg" class="card-img-top"
+            alt="jeuxdedés"></a>
+        <div class="card-body">
+          <p class="card-text">Jeux de dés</p>
         </div>
       </div>
 
-      <div class="carousel-item">
-        <img src="img/limited-time-offer-1438906_640.png" class="d-block" alt="moitieprix">
-        <p>Du 23 septembre au 7 octobre 2023, pour l'achat d'un jeu, le 2ème est à moitié prix.</p>
+      <div class="card">
+        <a href="jeux-de-cartes.html" target="_blank"><img src="img/pexels-pavel-danilyuk-8111371.jpg"
+            class="card-img-top" alt="jeuxdecartes"></a>
+        <div class="card-body">
+          <p class="card-text">Jeux de cartes</p>
+        </div>
       </div>
 
-
-      <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-          aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-          aria-label="Slide 2"></button>
-      </div>
-    </div>
-  </div>
-
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-  </div>
-
-  <div class="categories d-flex row justify-content-center">
-    <div class="card">
-      <a href="jeux-de-des.html" target="_blank"><img src="img/dice-442544_640.jpg" class="card-img-top"
-          alt="jeuxdedés"></a>
-      <div class="card-body">
-        <p class="card-text">Jeux de dés</p>
+      <div class="card">
+        <a href="jeux-de-plateau.html" target="_blank"><img src="img/pexels-cottonbro-studio-4004429.jpg"
+            class="card-img-top" alt="jeuxdeplateaux"></a>
+        <div class="card-body">
+          <p class="card-text">Jeux de plateaux</p>
+        </div>
       </div>
     </div>
-
-    <div class="card">
-      <a href="jeux-de-cartes.html" target="_blank"><img src="img/pexels-pavel-danilyuk-8111371.jpg"
-          class="card-img-top" alt="jeuxdecartes"></a>
-      <div class="card-body">
-        <p class="card-text">Jeux de cartes</p>
-      </div>
     </div>
 
-    <div class="card">
-      <a href="jeux-de-plateau.html" target="_blank"><img src="img/pexels-cottonbro-studio-4004429.jpg"
-          class="card-img-top" alt="jeuxdeplateaux"></a>
-      <div class="card-body">
-        <p class="card-text">Jeux de plateaux</p>
-      </div>
+    <div class="b-example-divider"></div>
+    <div class="container">
+      <footer class="py-3 my-4">
+        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+          <li class="nav-item"><a href="contact.html" class="nav-link px-2 text-muted">Contact</a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">CGU</a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Mentions légales</a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
+        </ul>
+        <p class="text-center text-muted">&copy; 2023 Teams Ln ELoann Benjamin</p>
+      </footer>
     </div>
-  </div>
 
-  <div class="b-example-divider"></div>
-  <div class="container">
-    <footer class="py-3 my-4">
-      <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-        <li class="nav-item"><a href="contact.html" class="nav-link px-2 text-muted">Contact</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">CGU</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Mentions légales</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
-      </ul>
-      <p class="text-center text-muted">&copy; 2023 Teams Ln ELoann Benjamin</p>
-    </footer>
-  </div>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-    crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"></script>
 
 </body>
 
